# libfunnel

./: .clangd  LICENSE  README.md  meson.build  test-egl.c  test-vk.c
include/: funnel-egl.h  funnel-vk.h  funnel.h
src/: egl.c  funnel.c  funnel_internal.h  vulkan.c
